--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/mdx": "^12.1.6",
     "@notionhq/client": "^1.0.4",
     "async-sema": "3.1.1",
+    "eslint-config-next": "^12.1.6",
     "github-slugger": "1.4.0",
     "katex": "0.15.6",
     "next": "12",
