--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "next start",
     "build": "next build && node .next/server/build-rss.js",
     "format": "prettier --write \"**/*.{js,jsx,json,ts,tsx,md,mdx,css,html,yml,yaml,scss,sass}\" --ignore-path .gitignore",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "lint": "next lint"
   },
   "pre-commit": "lint-staged",
   "dependencies": {
     "@notionhq/client": "^1.0.4",
     "async-sema": "3.1.1",
+    "eslint-config-next": "^12.1.6",
     "github-slugger": "1.4.0",
     "katex": "0.15.6",
     "next": "12",
@@ -24,6 +26,8 @@
     "@types/katex": "0.14.0",
     "@types/node": "16.11.36",
     "@types/react": "18",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
     "autoprefixer": "^10.4.7",
     "lint-staged": "12.4.1",
     "postcss": "^8.4.14",
