--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"]
+  "extends": ["eslint:recommended", "next", "next/core-web-vitals", "prettier"],
+  "rules": {
+    "no-case-declarations": "off",
+    "import/no-anonymous-default-export": "off"
+  }
 }
