--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "pre-commit": "lint-staged",
   "dependencies": {
+    "@mdx-js/loader": "^2.1.1",
+    "@next/mdx": "^12.1.6",
     "@notionhq/client": "^1.0.4",
     "async-sema": "3.1.1",
     "eslint-config-next": "^12.1.6",
@@ -26,9 +28,9 @@
     "@types/katex": "0.14.0",
     "@types/node": "16.11.36",
     "@types/react": "18",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
-    "autoprefixer": "^10.4.7",
     "lint-staged": "12.4.1",
     "postcss": "^8.4.14",
     "pre-commit": "1.2.2",
