--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "github-slugger": "1.4.0",
     "katex": "0.15.6",
     "next": "12",
+    "next-seo": "^5.4.0",
     "prismjs": "1.28.0",
     "react": "18",
     "react-dom": "18",
+    "react-feather": "^2.0.9",
     "uuid": "8.3.2"
   },
   "devDependencies": {
