--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "pre-commit": "lint-staged",
   "dependencies": {
     "@mdx-js/loader": "^2.1.1",
+    "@next/env": "^12.1.6",
     "@next/mdx": "^12.1.6",
     "@notionhq/client": "^1.0.4",
     "async-sema": "3.1.1",
