--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^8.16.0",
     "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
+    "autoprefixer": "^10.4.7",
     "lint-staged": "12.4.1",
     "postcss": "^8.4.14",
     "pre-commit": "1.2.2",
