--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "pre-commit": "lint-staged",
   "dependencies": {
     "@mdx-js/loader": "^2.1.1",
+    "@mdx-js/react": "^2.1.1",
     "@next/env": "^12.1.6",
     "@next/mdx": "^12.1.6",
     "@notionhq/client": "^1.0.4",
@@ -31,10 +32,10 @@
     "@types/katex": "0.14.0",
     "@types/node": "16.11.36",
     "@types/react": "18",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
-    "autoprefixer": "^10.4.7",
     "lint-staged": "12.4.2",
     "postcss": "^8.4.14",
     "pre-commit": "1.2.2",
